# commonjs-server

./: CMakeLists.txt  README.md
js/: bar.js  foo.js
js/utils/: utils.js
src/: main.cpp
